--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">TimeSheet</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="name_label">Name</string>
+    <string name="code_label">Code</string>
+    <string name="description_label">Description</string>
+    <string name="begin_label">Begin</string>
+    <string name="end_label">End</string>
+    <string name="task_label">Task</string>
+    <string name="client_label">Client</string>
+    <string name="entry_label">Entry</string>
 </resources>
